<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 继承 Spring Boot 父工程，统一 Maven 插件、编码、测试与依赖管理基线。 -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.13</version>
        <relativePath/>
    </parent>

    <groupId>com.refinex</groupId>
    <artifactId>refinex-dbflow</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>Refinex DBFlow</name>
    <description>Internal MySQL MCP database operation gateway.</description>

    <!-- 项目级版本属性：除阶段明确锁定的 BOM 外，依赖版本优先交给 BOM 管理。 -->
    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-ai.version>1.1.4</spring-ai.version>
        <spring-cloud.version>2025.0.2</spring-cloud.version>
        <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
        <jsqlparser.version>5.3</jsqlparser.version>
    </properties>

    <!-- 统一依赖版本管理：当前阶段只导入 BOM，不提前引入业务实现依赖。 -->
    <dependencyManagement>
        <dependencies>
            <!-- Spring AI 版本基线：P04 开始实现 MCP Server 时复用此 BOM 管理 MCP starter。 -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud 版本基线：后续 Nacos、Actuator 与云原生集成沿用此 BOM。 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud Alibaba 版本基线：后续 Nacos Config/Discovery starter 由此 BOM 管理。 -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- WebMVC 基础依赖：提供 Spring MVC、内嵌 Tomcat 与基础 HTTP 能力。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Spring AI MCP WebMVC Server：提供 Streamable HTTP MCP endpoint 与工具暴露能力。 -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
        </dependency>

        <!-- Spring Security 基础依赖：提供管理端 session 登录、退出、CSRF 与后续 MCP 独立认证链路能力。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- Actuator 运维端点依赖：提供健康检查、指标和后续最小化运行时观测端点。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Thymeleaf 服务端模板依赖：用于管理端 Spring MVC 页面，不引入独立前端构建链。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

        <!-- JPA 基础依赖：为后续元数据 entity/repository 阶段提供持久化底座。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- 配置校验依赖：为 @ConfigurationProperties 提供 Jakarta Validation 启动期校验能力。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Nacos Config 集成依赖：仅在 nacos profile 中启用外部配置导入，版本由 Spring Cloud Alibaba BOM 管理。 -->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
        </dependency>

        <!-- Nacos Discovery 集成依赖：仅在 nacos profile 中启用服务发现注册，版本由 Spring Cloud Alibaba BOM 管理。 -->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        </dependency>

        <!-- Flyway 核心依赖：负责版本化管理 DBFlow 元数据库 schema。 -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>

        <!-- Flyway MySQL 支持：保留后续真实 MySQL 元数据库验证和部署能力。 -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-mysql</artifactId>
        </dependency>

        <!-- MySQL JDBC 驱动：目标库执行引擎连接 MySQL 项目环境时使用，版本由 Spring Boot BOM 管理。 -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- JSQLParser SQL 解析依赖：用于 DBFlow 服务端 SQL 分类、风险识别和后续策略执行前置判断。 -->
        <dependency>
            <groupId>com.github.jsqlparser</groupId>
            <artifactId>jsqlparser</artifactId>
            <version>${jsqlparser.version}</version>
        </dependency>

        <!-- H2 本地元数据库：当前阶段用于本地启动和 Flyway migration 测试。 -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- 配置元数据处理器：生成 IDE 可识别的 dbflow.* 配置提示，不参与运行时。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- 测试基础依赖：提供 JUnit、Spring Boot Test 与当前 context smoke test 能力。 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Spring Security 测试依赖：提供 MockMvc formLogin、CSRF 和认证断言支持。 -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Testcontainers JUnit 5 集成：管理真实 MySQL 容器生命周期。 -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Testcontainers MySQL 模块：为 P07 SQL 执行集成测试提供 MySQL 8 目标库。 -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mysql</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Maven 编译插件：显式锁定 Java release 21，并保留方法参数名供框架绑定和诊断使用。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <parameters>${maven.compiler.parameters}</parameters>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <!-- 配置元数据处理器路径：显式声明注解处理器，避免依赖 classpath 隐式发现。 -->
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${project.parent.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <!-- Maven 测试插件：沿用 JUnit Platform，并关闭模块路径以保持当前单模块 classpath 测试模型稳定。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <useModulePath>false</useModulePath>
                    <failIfNoTests>true</failIfNoTests>
                </configuration>
            </plugin>
            <!-- Spring Boot 打包插件：负责生成可执行 Spring Boot jar。 -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
